<resources>
    <string name="app_name">Open Tournament</string>
    <string name="title_activity_tournament_list">TournamentList</string>
    <string name="title_activity_tournament_details">TournamentDetailsActivity</string>
    <string name="title_activity_tournament_play">TournamentPlayActivity</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_nav_home">Home</string>
    <string name="drawer_nav_online_tournaments">Online Tournaments</string>
    <string name="drawer_nav_players">Players</string>
    <string name="drawer_nav_organized_tournaments">Organize Tournament</string>
    <string name="drawer_nav_account">Account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="heading_online_tournaments">Online Tournaments</string>
    <string name="heading_organized_tournaments">Your Tournaments</string>
    <string name="header_tournament_name">Tournament</string>
    <string name="header_remaining_seats">Seats</string>
    <string name="header_rank">Rank</string>
    <string name="toolbar_title_home">Home</string>
    <string name="toolbar_title_home_DEMO">Home - DEMO</string>
    <string name="toolbar_title_online_tournaments">Online Tournaments</string>
    <string name="toolbar_title_online_tournaments_DEMO">Online Tournaments - DEMO</string>
    <string name="toolbar_title_players">Online Players</string>
    <string name="toolbar_title_players_DEMO">Online Players - DEMO</string>
    <string name="toolbar_title_mypage">MyPage</string>
    <string name="toolbar_title_mypage_DEMO">MyPage - DEMO</string>
    <string name="toolbar_title_account">Account Management</string>
    <string name="toolbar_title_account_DEMO">Account Management - DEMO</string>
    <string name="toolbar_title_organized_tournaments">Organized Tournaments</string>
    <string name="toolbar_title_organized_tournaments_DEMO">Organized Tournaments - DEMO</string>
    <string name="players_in_tournament"> %1$d/%2$d</string>
    <string name="dialog_organize_tournament">Organize your own Tournament</string>
    <string name="label_tournament_name">Tournament name*</string>
    <string name="label_tournament_max_seats">Max Seats</string>
    <string name="label_tournament_date">Date</string>
    <string name="label_tournament_location">Location</string>
    <string name="label_tournament_solo_tournament">Solo Tournament</string>
    <string name="label_tournament_team_tournament">Team Tournament</string>
    <string name="success_create_tournament">Successfully save Tournament</string>
    <string name="success_update_tournament">Successfully update Tournament</string>
    <string name="success_delete_tournament">Successfully delete Tournament</string>
    <string name="success_upload_tournament">Successfully upload Tournament</string>
    <string name="dialog_confirm_delete_tournament">
        Sure delete tournament? You cannot recover any data if you confirm.
    </string>
    <string name="confirm_upload_tournament">Please confirm upload data</string>
    <string name="confirm_upload_tournament_text">
        Uploading tournament will enable other people to see your tournament. Only Tournament data will be
        visible in that moment. Updates in your Tournament must be published again. Rankings and Games
        can be published while the tournament takes place.
    </string>
     <string name="confirm_upload_games_text">
        Uploading games will enable other people to see actual games and ranking of tournament. 
        Only the actual state will be published now. If you change any games or pairings please publish again. 
    </string>
    <string name="no_online_tournaments_if_anonymous">
        You cannot upload tournaments anonymously.\n
        Please register or sign in with google or facebook.
    </string>
    <string name="no_online_tournaments_found">No online Tournaments found</string>
    <string name="team_match_not_online_yet">
        Tournament Organizer haven\'t upload team match yet 
    </string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_edit_tournament">Edit Tournament</string>
    <string name="nav_tournament_setup">Tournament Setup</string>
    <string name="nav_round_tab">Round %1$d</string>
    <string name="nav_games_tab">Games %1$d</string>
    <string name="nav_ranking_tab">Ranking Round %1$d</string>
    <string name="nav_home_activity">Home</string>
    <string name="nav_tournament_final">Final Results</string>
    <string name="search_player">Filter available players</string>
    <string name="label_firstname">Firstname*</string>
    <string name="label_nickname">Nickname*</string>
    <string name="label_lastname">Lastname*</string>
    <string name="label_affiliation">Club/City/Country</string>
    <string name="validation_error_empty">Field cannot be empty</string>
    <string name="success_new_player_inserted">Successfully add TournamentPlayer</string>
    <string name="new_player_tournament_title">New Tournament Player</string>
    <string name="tournament_player_list_heading">Tournament Players</string>
    <string name="start_tournament">START</string>
    <string name="player_name_in_row">%1$s \"%2$s\" %3$s</string>
    <string name="player_name_in_row_three_lines">%1$s \n\"%2$s\"\n %3$s</string>
    <string name="heading_tournament_player">Player in %2$s tournament: (%1$d)</string>
    <string name="game_divider">VS</string>
    <string name="heading_online_players">Players from online database</string>
    <string name="heading_local_players">Players from local database (only visible for you)</string>
    <string name="label_faction">Faction</string>
    <string name="label_teamname">Teamname</string>
    <string name="label_add_teamname">Add new Team name</string>
    <string name="team_name">Team:</string>
    <string name="faction">Faction: </string>
    <string name="no_team">No Team</string>
    <string name="add_new_team">Add new Team name</string>
    <string name="heading_my_page_registration">Your Registrations</string>
    <string name="heading_games_for_round">Games round: %1$d</string>
    <string name="upload_games">Upload</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_pairing_title">Pairing round: %1$d</string>
    <string name="confirm_pair_round_again_title">Pair round %1$d again</string>
    <string name="game_win">WIN: %1$d</string>
    <string name="game_cp">CP: %1$d</string>
    <string name="game_vp">VP: %1$d</string>
    <string name="result">confirm</string>
    <string name="result_pairing_title">RESULT</string>
    <string name="heading_ranking_for_round">Ranking</string>
    <string name="title_tournament_management">Tournament Management</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_name">anonymous</string>
    <string name="material_design_icons_id" translatable="false">material-design-icons</string>
    <string name="material_design_icons_name" translatable="false">Material Design Icons</string>
    <string name="material_design_icons_author" translatable="false">Austin Andrews</string>
    <string name="material_design_icons_description">Community managed Material Design icon set</string>
    <string name="material_design_icons_url" translatable="false">https://materialdesignicons.com/</string>
    <string name="about_used_libraries">Used Open Source libraries:</string>
    <string name="about">About</string>
    <string name="header_tournament_location">Location</string>
    <string name="header_tournament_date">Date</string>
    <string name="heading_tournmant_players">Tournament Players</string>
    <string name="tournament_online">online</string>
    <string name="header_ranking_number">#</string>
    <string name="header_ranking_player">tournamentPlayer</string>
    <string name="header_ranking_score">sc</string>
    <string name="header_ranking_sos">sos</string>
    <string name="header_ranking_cp">cp</string>
    <string name="header_ranking_vp">vp</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google+</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="login_with_password">Login with Password</string>
    <string name="login_anonymously">Login Anonymously</string>
    <string name="toast_sign_in_anonymously">Sign in anonymously</string>
    <string name="toast_no_connection">No connection to internet possible. You can\'t use OpenTournament online data or upload functionality. Offline Tournament organisation is possible</string>
    <string name="toast_sign_out_no_connection">you can\'t sign out when no internet</string>
     <string name="delete_tournament">Delete Tournament</string>
    <string name="dialof_confirm_draw">Sure draw?</string>
    <string name="success_convert_to_online_tournament">successfully convert local Tournament to online</string>
    <string name="nav_tournament_players">Tournament Players</string>
    <string name="label_fullname">Fullname</string>
    <string name="success_tournament_player_is_online">Tournament saved online</string>
    <string name="offline_my_page">you are offline and/or anonymous - please connect or login/make an account to see your registrations</string>
    <string name="offline_text">you are offline - you cannot up/download any data</string>
    <string name="offline_player_text">you are offline - cannot load online players</string>
    <string name="no_tournament_players">No Tournament Players found</string>
    <string name="no_registrations">No Registrations found</string>
    <string name="confirm_remove_tournament_player">Sure remove tournamentPlayer from tournament?</string>
    <string name="confirm_start_tournament_title">Tournament should start?</string>
    <string name="header_organised_tournament_action">Action</string>
    <string name="no_available_online_players_for_tournament">No online Players found (check filter)</string>
    <string name="no_available_players_for_tournament">No local players found (check filter)</string>
    <string name="pair_again">Pair again</string>
    <string name="next_round">Next Round</string>
    <string name="pairing_option_player_not_play_twice_against_each_other">Player don\'t play twice against each other</string>
    <string name="pairing_option_player_with_same_team_not_play_against_each_other">Player in same team don\'t play against each other</string>
    <string name="pairing_option_affiliation_with_same_affiliation_not_play_against_each_other">
        Player/Team with same Club/City/Country don\'t play against each other
    </string>
    <string name="uneven_player_message_title">Uneven Players in Tournament.</string>
    <string name="uneven_player_message"> You can\'t start a Tournament with uneven amount of players.\n Should a dummy TournamentPlayer be inserted for you?</string>
    <string name="not_all_games_finished_next_round">Not all games are finished.</string>
    <string name="not_all_games_finished_next_round_msg">Please insert results before pair next round.</string>
    <string name="not_all_games_finished_end_tournament">Not all games are finished. Please insert all results before end tournament.</string>
    <string name="at_least_one_game_started">At least one game is finished</string>
    <string name="confirm_drop_tournament_player">Confirm drop tournamentPlayer</string>
    <string name="create_account">Create New Account</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="failed">failed</string>
    <string name="label_teamsize">Teamsize</string>
</resources>