<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/drawer_nav_home" />
        <item
            android:id="@+id/nav_tournaments"
            android:icon="@drawable/ic_play_arrow_black_24dp"
            android:title="@string/drawer_nav_tournaments" />
        <item
            android:id="@+id/nav_players"
            android:icon="@drawable/ic_face_black_24dp"
            android:title="@string/drawer_nav_players" />

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/drawer_nav_account" />

    </group>

    <group android:id="@+id/drawer_menu_main_group">
        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_note_add_black_24dp"
            android:orderInCategory="200"
            android:title="@string/about"
            />
    </group>

</menu>
