<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="@dimen/main_tick"
    android:paddingTop="@dimen/main_tick"
    android:paddingBottom="@dimen/main_tick"
    android:paddingLeft="@dimen/main_tick">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:id="@+id/header_ranking_number"
        android:text="@string/header_ranking_number"/>
    
    <TextView
        android:id="@+id/header_ranking_player"
        android:text="@string/header_ranking_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/main_tick"
        android:layout_toRightOf="@id/header_ranking_number"
   />

    <TextView
        android:id="@+id/header_ranking_score"
        android:text="@string/header_ranking_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="360dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
       />

    <TextView
        android:id="@+id/header_ranking_sos"
        android:text="@string/header_ranking_sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_tick"
        android:layout_toRightOf="@id/header_ranking_score"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/header_ranking_cp"
        android:text="@string/header_ranking_cp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_tick"
        android:layout_toRightOf="@id/header_ranking_sos"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/header_ranking_vp"
        android:text="@string/header_ranking_vp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_tick"
        android:layout_toRightOf="@id/header_ranking_cp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_tick"
        android:background="@color/colorAccent"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>