<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/player_list_padding"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
    
    <EditText android:id="@+id/input_filter_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_player"
        android:inputType="textVisiblePassword"
        android:focusable="true" 
        android:focusableInTouchMode="true"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:id="@+id/heading_online_players"
        android:gravity="center"
        android:text="@string/heading_online_players"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_gravity="center_horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textStyle="bold"
        android:id="@+id/no_online_available_players"
        android:text="@string/no_available_players_for_tournament" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textStyle="bold"
        android:id="@+id/offline_text"
        android:text="@string/offline_text"
        android:visibility="gone"/>
    

    <android.support.v7.widget.RecyclerView
        android:id="@+id/online_player_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:id="@+id/heading_local_players"
        android:gravity="center"
        android:text="@string/heading_local_players"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textStyle="bold"
        android:id="@+id/no_local_available_players"
        android:text="@string/no_available_players_for_tournament" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/local_player_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" />
</LinearLayout>